--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-      @apply bg-blue-100 bg-gradient-to-t from-green-100
-      h-full
+      @apply bg-blue-100 bg-gradient-to-r from-green-100
+      
     }
   }
