--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Agdasima&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +8,7 @@
 @layer base {
     body {
       @apply bg-blue-100 bg-gradient-to-r from-green-100
+      font-agdasima
       
     }
   }
